@@ -30,7 +30,7 @@ public class GetLatestNewsAction extends ActionSupport implements ServletRequest
 	 * 
 	 */
 	private static final long serialVersionUID = 1L;
-	private final static Logger log = Logger.getLogger(GetLatestNewsAction.class);
+	private final static Logger LOG = Logger.getLogger(GetLatestNewsAction.class);
 	
 	private String task = null;
 	JSONObject jObj = null;
@@ -89,23 +89,23 @@ public class GetLatestNewsAction extends ActionSupport implements ServletRequest
 		
 		try {
 			jObj = new JSONObject(param);
-			System.out.println(jObj);
+			LOG.info(jObj);
 		} catch (ParseException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-		log.debug("Task::"+jObj.getString("task"));
+		LOG.debug("Task::"+jObj.getString("task"));
 		allDistrictsList = new ArrayList<SelectOptionVO>();
 		if(jObj.getString("task").equalsIgnoreCase("distPapersUrl"))
 		{	
 			if("MLA".equals(accessType) || "MP".equals(accessType) || "STATE".equals(accessType) || "DISTRICT".equals(accessType))
 			{	
-				log.debug(accessType);
-				log.debug(accessValue);
+				LOG.debug(accessType);
+				LOG.debug(accessValue);
 				if("DISTRICT".equals(accessType))
 					stateID = epaperService.getStateIdFromDistrictByDistrictId(accessValue);
 				else if("STATE".equals(accessType))
-					stateID = new Long(accessValue);
+					stateID = Long.valueOf(accessValue);
 				else
 				stateID= epaperService.getStateIdFromConstitunecyByAccessValue(accessValue);
 				allDistrictsList = epaperService.getDistrictsForState(stateID);
@@ -121,7 +121,7 @@ public class GetLatestNewsAction extends ActionSupport implements ServletRequest
 		} if(jObj.getString("task").equalsIgnoreCase("getSelectedDistPaper"))
 		{
 			String districtId = jObj.getString("selected");
-			newsPaperURLsVO.setEPapersURLsVO(epaperService.getEPapersForDistrict(new Long(districtId)));			
+			newsPaperURLsVO.setEPapersURLsVO(epaperService.getEPapersForDistrict(Long.valueOf(districtId)));			
 		}
 		
 		return Action.SUCCESS;
