@@ -40,14 +40,14 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 	private static final long serialVersionUID = 1L;
 	private HttpServletRequest request;
 	private List<SelectOptionVO> statusList;
-	private static final Logger log = Logger.getLogger(InitailConstituencyManagementAction.class);
+	private static final Logger LOG = Logger.getLogger(InitailConstituencyManagementAction.class);
 	private IProblemManagementReportService problemManagementReportService;
 	private String accessType;
 	private Long accessValue;
 	private String task = null;
 	JSONObject jObj = null;
 	private List<ProblemBeanVO> problemsList;
-	private String EXTERNAL_PERSON;
+	private String externalPerson;
 	private ISmsService smsCountrySmsService;
 	private Long remainingSms;
 	private List<LocalUserGroupsInfoVO> localUserGroupsInfoVO; 
@@ -136,14 +136,14 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		this.remainingSms = remainingSms;
 	}
 	
-	public String getEXTERNAL_PERSON() {
-		return EXTERNAL_PERSON;
+	public String getExternalPerson() {
+		return externalPerson;
 	}
 
-	public void setEXTERNAL_PERSON(String external_person) {
-		EXTERNAL_PERSON = external_person;
+	public void setExternalPerson(String externalPerson) {
+		this.externalPerson = externalPerson;
 	}
-	
+
 	public void setServletRequest(HttpServletRequest request) {
 		this.request = request;
 	}
@@ -215,7 +215,7 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 
 	public String execute() throws Exception{
 		
-		log.debug("In execute of Constituency Management Action ********");
+		LOG.debug("In execute of Constituency Management Action ********");
 		
 		HttpSession session = request.getSession();
 		RegistrationVO user = (RegistrationVO) session.getAttribute("USER");
@@ -227,12 +227,12 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 			return ERROR;
 				*/
 		accessType = user.getAccessType();
-		accessValue= new Long(user.getAccessValue());
+		accessValue= Long.valueOf(user.getAccessValue());
 		
 		Long userID = user.getRegistrationID();
 		remainingSms = smsCountrySmsService.getRemainingSmsLeftForUser(userID);
 		
-		EXTERNAL_PERSON = IConstants.EXTERNAL_PERSON;
+		externalPerson = IConstants.EXTERNAL_PERSON;
 		
 		statusList = problemManagementReportService.getAllProblemStatusInfo();
 		statusList.add(0,new SelectOptionVO(-1l, "Select Status"));
@@ -260,7 +260,7 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 			}
 		}
 			Long status =  jObj.getLong("status");
-			Long locationId = new Long(jObj.getLong("locationId"));//contains access value
+			Long locationId = Long.valueOf(jObj.getLong("locationId"));//contains access value
 			String accessType = jObj.getString("accessType");	
 			//problemsList = problemManagementReportService.getProblemsInfoByStatusInALocation(locationId, accessType, user.getRegistrationID(), status);
 			problemsList = problemManagementReportService.getProblemsInfoByStatusInALocationForUser(locationId,accessType,user.getRegistrationID(),status);
@@ -307,37 +307,37 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		ConstituencyManagementDataVO userGroupMainVO = new ConstituencyManagementDataVO();
 		
 		ConstituencyManagementRegionWiseOverviewVO region = new ConstituencyManagementRegionWiseOverviewVO();
-		region.setRegionId(new Long(1));
+		region.setRegionId(Long.valueOf(1));
 		region.setRegionTitle("Apartment");
 		region.setRegionName("Nellore");
 		region.setRegionType("District");
-		region.setCountValue(new Long(500));
+		region.setCountValue(Long.valueOf(500));
 		
 		List<ConstituencyManagementSubRegionWiseOverviewVO> subRegions = new ArrayList<ConstituencyManagementSubRegionWiseOverviewVO>();
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub1 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub1.setSubRegionId(new Long(1));
+		sub1.setSubRegionId(Long.valueOf(1));
 		sub1.setSubRegionName("Allur");
 		sub1.setSubRegionType("Mandal");
-		sub1.setCountValue(new Long(100));
+		sub1.setCountValue(Long.valueOf(100));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub2 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub2.setSubRegionId(new Long(2));
+		sub2.setSubRegionId(Long.valueOf(2));
 		sub2.setSubRegionName("Bogole");
 		sub2.setSubRegionType("Mandal");
-		sub2.setCountValue(new Long(200));
+		sub2.setCountValue(Long.valueOf(200));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub3 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub3.setSubRegionId(new Long(3));
+		sub3.setSubRegionId(Long.valueOf(3));
 		sub3.setSubRegionName("Kavali");
 		sub3.setSubRegionType("Municipality");
-		sub3.setCountValue(new Long(100));
+		sub3.setCountValue(Long.valueOf(100));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub4 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub4.setSubRegionId(new Long(4));
+		sub4.setSubRegionId(Long.valueOf(4));
 		sub4.setSubRegionName("Dagadarthi");
 		sub4.setSubRegionType("Mandal");
-		sub4.setCountValue(new Long(100));
+		sub4.setCountValue(Long.valueOf(100));
 		
 		subRegions.add(sub1);
 		subRegions.add(sub2);
@@ -351,14 +351,14 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		//--
 		ConstituencyManagementInfluenceScopeOverviewVO scope1 = new ConstituencyManagementInfluenceScopeOverviewVO();
 		scope1.setInfluenceScope("State");
-		scope1.setCountValue(new Long(50));
+		scope1.setCountValue(Long.valueOf(50));
 		
 		List<ConstituencyManagementInfluenceScopeDetailsVO> subScopeList1 = new ArrayList<ConstituencyManagementInfluenceScopeDetailsVO>();
 		
 		ConstituencyManagementInfluenceScopeDetailsVO subScope11 = new ConstituencyManagementInfluenceScopeDetailsVO();
-		subScope11.setInfluenceScopeRegionId(new Long(1));
+		subScope11.setInfluenceScopeRegionId(Long.valueOf(1));
 		subScope11.setInfluenceScopeRegion("Andhra Pradesh");		
-		subScope11.setCountValue(new Long(50));
+		subScope11.setCountValue(Long.valueOf(50));
 		
 		subScopeList1.add(subScope11);
 		scope1.setInfluenceScopeDetails(subScopeList1);
@@ -367,24 +367,24 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		//--
 		ConstituencyManagementInfluenceScopeOverviewVO scope2 = new ConstituencyManagementInfluenceScopeOverviewVO();
 		scope2.setInfluenceScope("District");
-		scope2.setCountValue(new Long(100));
+		scope2.setCountValue(Long.valueOf(100));
 		
 		List<ConstituencyManagementInfluenceScopeDetailsVO> subScopeList2 = new ArrayList<ConstituencyManagementInfluenceScopeDetailsVO>();
 		
 		ConstituencyManagementInfluenceScopeDetailsVO subScope21 = new ConstituencyManagementInfluenceScopeDetailsVO();
-		subScope21.setInfluenceScopeRegionId(new Long(1));
+		subScope21.setInfluenceScopeRegionId(Long.valueOf(1));
 		subScope21.setInfluenceScopeRegion("Nellore");		
-		subScope21.setCountValue(new Long(50));
+		subScope21.setCountValue(Long.valueOf(50));
 		
 		ConstituencyManagementInfluenceScopeDetailsVO subScope22 = new ConstituencyManagementInfluenceScopeDetailsVO();
-		subScope22.setInfluenceScopeRegionId(new Long(2));
+		subScope22.setInfluenceScopeRegionId(Long.valueOf(2));
 		subScope22.setInfluenceScopeRegion("Prakasam");		
-		subScope22.setCountValue(new Long(20));
+		subScope22.setCountValue(Long.valueOf(20));
 		
 		ConstituencyManagementInfluenceScopeDetailsVO subScope23 = new ConstituencyManagementInfluenceScopeDetailsVO();
-		subScope23.setInfluenceScopeRegionId(new Long(3));
+		subScope23.setInfluenceScopeRegionId(Long.valueOf(3));
 		subScope23.setInfluenceScopeRegion("Chittor");		
-		subScope23.setCountValue(new Long(30));
+		subScope23.setCountValue(Long.valueOf(30));
 		
 		subScopeList2.add(subScope21);
 		subScopeList2.add(subScope22);
@@ -396,24 +396,24 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		//--
 		ConstituencyManagementInfluenceScopeOverviewVO scope3 = new ConstituencyManagementInfluenceScopeOverviewVO();
 		scope3.setInfluenceScope("Constituency");
-		scope3.setCountValue(new Long(250));
+		scope3.setCountValue(Long.valueOf(250));
 		
 		List<ConstituencyManagementInfluenceScopeDetailsVO> subScopeList3 = new ArrayList<ConstituencyManagementInfluenceScopeDetailsVO>();
 		
 		ConstituencyManagementInfluenceScopeDetailsVO subScope31 = new ConstituencyManagementInfluenceScopeDetailsVO();
-		subScope31.setInfluenceScopeRegionId(new Long(1));
+		subScope31.setInfluenceScopeRegionId(Long.valueOf(1));
 		subScope31.setInfluenceScopeRegion("Kavali");		
-		subScope31.setCountValue(new Long(50));
+		subScope31.setCountValue(Long.valueOf(50));
 		
 		ConstituencyManagementInfluenceScopeDetailsVO subScope32 = new ConstituencyManagementInfluenceScopeDetailsVO();
-		subScope32.setInfluenceScopeRegionId(new Long(2));
+		subScope32.setInfluenceScopeRegionId(Long.valueOf(2));
 		subScope32.setInfluenceScopeRegion("Gudur");		
-		subScope32.setCountValue(new Long(100));
+		subScope32.setCountValue(Long.valueOf(100));
 		
 		ConstituencyManagementInfluenceScopeDetailsVO subScope33 = new ConstituencyManagementInfluenceScopeDetailsVO();
-		subScope33.setInfluenceScopeRegionId(new Long(3));
+		subScope33.setInfluenceScopeRegionId(Long.valueOf(3));
 		subScope33.setInfluenceScopeRegion("Ongole");		
-		subScope33.setCountValue(new Long(100));
+		subScope33.setCountValue(Long.valueOf(100));
 		
 		subScopeList3.add(subScope31);
 		subScopeList3.add(subScope32);
@@ -433,37 +433,37 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		List<ConstituencyManagementRegionWiseOverviewVO> categoriesList = new ArrayList<ConstituencyManagementRegionWiseOverviewVO>();
 		
 		ConstituencyManagementRegionWiseOverviewVO region1 = new ConstituencyManagementRegionWiseOverviewVO();
-		region1.setRegionId(new Long(1));
+		region1.setRegionId(Long.valueOf(1));
 		region1.setRegionTitle("Mahila Group");
 		region1.setRegionName("Nellore");
 		region1.setRegionType("District");
-		region1.setCountValue(new Long(400));
+		region1.setCountValue(Long.valueOf(400));
 		
 		List<ConstituencyManagementSubRegionWiseOverviewVO> subRegions1 = new ArrayList<ConstituencyManagementSubRegionWiseOverviewVO>();
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub11 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub11.setSubRegionId(new Long(1));
+		sub11.setSubRegionId(Long.valueOf(1));
 		sub11.setSubRegionName("Allur");
 		sub11.setSubRegionType("Mandal");
-		sub11.setCountValue(new Long(50));
+		sub11.setCountValue(Long.valueOf(50));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub21 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub21.setSubRegionId(new Long(2));
+		sub21.setSubRegionId(Long.valueOf(2));
 		sub21.setSubRegionName("Bogole");
 		sub21.setSubRegionType("Mandal");
-		sub21.setCountValue(new Long(250));
+		sub21.setCountValue(Long.valueOf(250));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub31 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub31.setSubRegionId(new Long(3));
+		sub31.setSubRegionId(Long.valueOf(3));
 		sub31.setSubRegionName("Kavali");
 		sub31.setSubRegionType("Municipality");
-		sub31.setCountValue(new Long(100));
+		sub31.setCountValue(Long.valueOf(100));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub41 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub41.setSubRegionId(new Long(4));
+		sub41.setSubRegionId(Long.valueOf(4));
 		sub41.setSubRegionName("Dagadarthi");
 		sub41.setSubRegionType("Mandal");
-		sub41.setCountValue(new Long(100));
+		sub41.setCountValue(Long.valueOf(100));
 		
 		subRegions1.add(sub11);
 		subRegions1.add(sub21);
@@ -473,37 +473,37 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		region1.setSubRegionWiseOverview(subRegions1);
 		
 		ConstituencyManagementRegionWiseOverviewVO region2 = new ConstituencyManagementRegionWiseOverviewVO();
-		region2.setRegionId(new Long(1));
+		region2.setRegionId(Long.valueOf(1));
 		region2.setRegionTitle("Dwakara Group");
 		region2.setRegionName("Nellore");
 		region2.setRegionType("District");
-		region2.setCountValue(new Long(600));
+		region2.setCountValue(Long.valueOf(600));
 		
 		List<ConstituencyManagementSubRegionWiseOverviewVO> subRegions2 = new ArrayList<ConstituencyManagementSubRegionWiseOverviewVO>();
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub12 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub12.setSubRegionId(new Long(1));
+		sub12.setSubRegionId(Long.valueOf(1));
 		sub12.setSubRegionName("Allur");
 		sub12.setSubRegionType("Mandal");
-		sub12.setCountValue(new Long(150));
+		sub12.setCountValue(Long.valueOf(150));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub22 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub22.setSubRegionId(new Long(2));
+		sub22.setSubRegionId(Long.valueOf(2));
 		sub22.setSubRegionName("Bogole");
 		sub22.setSubRegionType("Mandal");
-		sub22.setCountValue(new Long(150));
+		sub22.setCountValue(Long.valueOf(150));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub32 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub32.setSubRegionId(new Long(3));
+		sub32.setSubRegionId(Long.valueOf(3));
 		sub32.setSubRegionName("Kavali");
 		sub32.setSubRegionType("Municipality");
-		sub32.setCountValue(new Long(200));
+		sub32.setCountValue(Long.valueOf(200));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub42 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub42.setSubRegionId(new Long(4));
+		sub42.setSubRegionId(Long.valueOf(4));
 		sub42.setSubRegionName("Dagadarthi");
 		sub42.setSubRegionType("Mandal");
-		sub42.setCountValue(new Long(100));
+		sub42.setCountValue(Long.valueOf(100));
 		
 		subRegions2.add(sub12);
 		subRegions2.add(sub21);
@@ -513,37 +513,37 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		region2.setSubRegionWiseOverview(subRegions2);
 		
 		ConstituencyManagementRegionWiseOverviewVO region3 = new ConstituencyManagementRegionWiseOverviewVO();
-		region3.setRegionId(new Long(1));
+		region3.setRegionId(Long.valueOf(1));
 		region3.setRegionTitle("Youth Group");
 		region3.setRegionName("Nellore");
 		region3.setRegionType("District");
-		region3.setCountValue(new Long(300));
+		region3.setCountValue(Long.valueOf(300));
 		
 		List<ConstituencyManagementSubRegionWiseOverviewVO> subRegions3 = new ArrayList<ConstituencyManagementSubRegionWiseOverviewVO>();
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub13 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub13.setSubRegionId(new Long(1));
+		sub13.setSubRegionId(Long.valueOf(1));
 		sub13.setSubRegionName("Allur");
 		sub13.setSubRegionType("Mandal");
-		sub13.setCountValue(new Long(50));
+		sub13.setCountValue(Long.valueOf(50));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub23 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub23.setSubRegionId(new Long(2));
+		sub23.setSubRegionId(Long.valueOf(2));
 		sub23.setSubRegionName("Bogole");
 		sub23.setSubRegionType("Mandal");
-		sub23.setCountValue(new Long(150));
+		sub23.setCountValue(Long.valueOf(150));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub33 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub33.setSubRegionId(new Long(3));
+		sub33.setSubRegionId(Long.valueOf(3));
 		sub33.setSubRegionName("Kavali");
 		sub33.setSubRegionType("Municipality");
-		sub33.setCountValue(new Long(50));
+		sub33.setCountValue(Long.valueOf(50));
 		
 		ConstituencyManagementSubRegionWiseOverviewVO sub43 = new ConstituencyManagementSubRegionWiseOverviewVO();
-		sub43.setSubRegionId(new Long(4));
+		sub43.setSubRegionId(Long.valueOf(4));
 		sub43.setSubRegionName("Dagadarthi");
 		sub43.setSubRegionType("Mandal");
-		sub43.setCountValue(new Long(50));
+		sub43.setCountValue(Long.valueOf(50));
 		
 		subRegions3.add(sub13);
 		subRegions3.add(sub23);
@@ -578,7 +578,7 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		}
 		
 		String groupName =  jObj.getString("groupName");
-		Long groupId = new Long(jObj.getLong("groupId"));//contains access value
+		Long groupId = Long.valueOf(jObj.getLong("groupId"));//contains access value
 		String location = jObj.getString("locationType");
 		String locationType = "";
 		if("States".equalsIgnoreCase(location))
@@ -603,7 +603,7 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		
 		UserGroupDetailsVO u1 = new UserGroupDetailsVO();
 		u1.setGroupName("Group 1");
-		u1.setGroupId(new Long(1));
+		u1.setGroupId(Long.valueOf(1));
 		u1.setGroupDesc("Group 1 Description");
 		u1.setCreatedDate("27-10-2010");
 		u1.setNoOfPersons("54");
@@ -611,7 +611,7 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		
 		UserGroupDetailsVO u2 = new UserGroupDetailsVO();
 		u2.setGroupName("Group 1");
-		u2.setGroupId(new Long(1));
+		u2.setGroupId(Long.valueOf(1));
 		u2.setGroupDesc("Group 1 Description");
 		u2.setCreatedDate("27-10-2010");
 		u2.setNoOfPersons("54");
@@ -628,7 +628,7 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		HttpSession session = request.getSession();
 		RegistrationVO user = (RegistrationVO) session.getAttribute("USER");
 					
-		Long groupId = new Long(request.getParameter("groupId"));//contains access value
+		Long groupId = Long.valueOf(request.getParameter("groupId"));//contains access value
 		
 		//userGroupMembersInfoVO = userGroupService.getCompleteUserGroupMemberDetailsForAGroup(groupId);
 		
@@ -636,25 +636,25 @@ public class InitailConstituencyManagementAction extends ActionSupport implement
 		
 		UserGroupMembersInfoVO u1 = new UserGroupMembersInfoVO();
 		u1.setName("Candidate 1");
-		u1.setUserId(new Long(1));
+		u1.setUserId(Long.valueOf(1));
 		u1.setMobileNumber("9959985735");
 		u1.setLocation("Nellore");
 		
 		UserGroupMembersInfoVO u2 = new UserGroupMembersInfoVO();
 		u2.setName("Candidate 2");
-		u2.setUserId(new Long(2));
+		u2.setUserId(Long.valueOf(2));
 		u2.setMobileNumber("99899722789");
 		u2.setLocation("Nellore");
 		
 		UserGroupMembersInfoVO u3 = new UserGroupMembersInfoVO();
 		u3.setName("Candidate 3");
-		u3.setUserId(new Long(3));
+		u3.setUserId(Long.valueOf(3));
 		u3.setMobileNumber("9948755741");
 		u3.setLocation("Nellore");
 		
 		UserGroupMembersInfoVO u4 = new UserGroupMembersInfoVO();
 		u4.setName("Candidate 4");
-		u4.setUserId(new Long(4));
+		u4.setUserId(Long.valueOf(4));
 		u4.setMobileNumber("9989876597");
 		u4.setLocation("Nellore");
 		
