@@ -9,6 +9,7 @@ import java.util.Map;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
 
+import org.apache.log4j.Logger;
 import org.apache.struts2.interceptor.ServletRequestAware;
 
 import org.json.JSONArray;
@@ -41,6 +42,7 @@ public class VotersEditNewHHAction  extends ActionSupport implements ServletRequ
 	 * 
 	 */
 	private static final long serialVersionUID = -8900996662457488196L;
+	private static final Logger LOG = Logger.getLogger(VotersEditNewHHAction.class);
 	private IVotersAnalysisService votersAnalysisService;
 	JSONObject jObj = null;
 	private String task = null;
@@ -539,8 +541,8 @@ public class VotersEditNewHHAction  extends ActionSupport implements ServletRequ
 		userAccessStates = staticDataService.getUserAccessStates(userId);
 		
 		
-		Long electionYear = new Long(IConstants.PRESENT_ELECTION_YEAR);
-		Long electionTypeId = new Long(IConstants.ASSEMBLY_ELECTION_TYPE_ID);
+		Long electionYear = Long.valueOf(IConstants.PRESENT_ELECTION_YEAR);
+		Long electionTypeId = Long.valueOf(IConstants.ASSEMBLY_ELECTION_TYPE_ID);
 		userAccessConstituencyList = crossVotingEstimationService.getConstituenciesForElectionYearAndTypeWithUserAccess(userId,electionYear,electionTypeId);
 		constituencyList = votersAnalysisService.getConstituencyList(userAccessConstituencyList);
 		constituencyList.add(0, new SelectOptionVO(0L,"Select Constituency"));
@@ -571,7 +573,7 @@ public class VotersEditNewHHAction  extends ActionSupport implements ServletRequ
 			if(session.getAttribute(IWebConstants.PARTY_ANALYST_USER_ROLE) !=null && session.getAttribute(IWebConstants.PARTY_ANALYST_USER_ROLE).equals(true))
 			{
 				String accessType =user.getAccessType();
-				Long accessValue= new Long(user.getAccessValue());
+				Long accessValue= Long.valueOf(user.getAccessValue());
 				
 			}*/
 		
@@ -595,9 +597,9 @@ public String saveVoterDetails(){
 	String voterId = request.getParameter("voterId");
 	String boothId = request.getParameter("boothId");
 	if(voterId != null && voterId.trim().length() > 0)
-	 voterHouseInfoVO.setVoterId(new Long(voterId));
+	 voterHouseInfoVO.setVoterId(Long.valueOf(voterId));
 	if(boothId != null && boothId.trim().length() > 0)
-		 voterHouseInfoVO.setBoothId(new Long(boothId));
+		 voterHouseInfoVO.setBoothId(Long.valueOf(boothId));
 	 votersAnalysisService.updateVoterDetails(voterHouseInfoVO,"all",false);
 	request.setAttribute("voterId", voterHouseInfoVO.getVoterId());
 	resultStr = SUCCESS;
@@ -618,10 +620,10 @@ public String saveVoterDetails(){
 	//List<SelectOptionVO> partyGroupList=null;
 	if(voterId !=null)
 	{
-		voterHouseInfoVO1=votersAnalysisService.getBoothDetailsForVoter(new Long(boothId));
-		voterHouseInfoVO= votersAnalysisService.getVoterPersonalDetailsByVoterId(new Long(voterId),1l);
+		voterHouseInfoVO1=votersAnalysisService.getBoothDetailsForVoter(Long.valueOf(boothId));
+		voterHouseInfoVO= votersAnalysisService.getVoterPersonalDetailsByVoterId(Long.valueOf(voterId),1l);
 		
-		List<GenericVO> hhLeadersList=votersAnalysisService.getHHLeadersList(new Long(boothId));
+		List<GenericVO> hhLeadersList=votersAnalysisService.getHHLeadersList(Long.valueOf(boothId));
 		
 		GenericVO gvo=houseHoldSurveyReportService.getLeaderIdAndMobileNoFromHH(Long.valueOf(voterId));
 		if(gvo.getName()!=null){
@@ -653,17 +655,17 @@ public String saveVoterDetails(){
 		param = getTask();
 		try {
 			jObj = new JSONObject(param);
-			System.out.println(jObj);
+			LOG.info(jObj);
 		} catch (ParseException e) {
 			e.printStackTrace();
 		}
 		
 		if(jObj.getString("task").equalsIgnoreCase("getVoterCategories")){
-			System.out.println("with in the action");
-			Long voterCategoryId=new Long(jObj.getString("voterCategory"));
+			LOG.info("with in the action");
+			Long voterCategoryId=Long.valueOf(jObj.getString("voterCategory"));
 			String letters=jObj.getString("letters");
 			voterCategoryValues = votersAnalysisService.getVoterCategoryValues(voterCategoryId,letters);
-			System.out.println("voterCategoryValues value is:"+voterCategoryValues);
+			LOG.info("voterCategoryValues value is:"+voterCategoryValues);
 		}
 		else if(jObj.getString("task").equalsIgnoreCase("storeValues"))
 		{
@@ -927,8 +929,8 @@ public String saveLocality()
 							for(int j=0;j<totalCategCount;j++){
 								category = new VoterHouseInfoVO();
 								String[] categVal = jSONObject.getString("categ"+j).split(",");
-								category.setUserCategoryValueId(new Long(categVal[0]));
-								category.setCategoryValuesId(new Long(categVal[1]));
+								category.setUserCategoryValueId(Long.valueOf(categVal[0]));
+								category.setCategoryValuesId(Long.valueOf(categVal[1]));
 								categoriesList.add(category);
 							}
 							
@@ -1011,7 +1013,7 @@ public String saveLocality()
 			    		searchInfo.setGroupPresent(true);
 			    		
 			    	else{
-			    		categories.add(new Long(id));
+			    		categories.add(Long.valueOf(id));
 			    	}
 			    }
 			} 
@@ -1082,8 +1084,8 @@ public String saveLocality()
 					for(int j=0;j<totalCategoriesCount;j++){
 						category = new VoterHouseInfoVO();
 						String[] categVal = jSONObject.getString("categ"+j).split("-");
-						category.setUserCategoryValueId(new Long(categVal[0]));
-						category.setCategoryValuesId(new Long(categVal[1]));
+						category.setUserCategoryValueId(Long.valueOf(categVal[0]));
+						category.setCategoryValuesId(Long.valueOf(categVal[1]));
 						categoriesList.add(category);					
 					}
 					
@@ -1223,7 +1225,7 @@ public String saveLocality()
 					    		parameters.setGroupPresent(true);
 					    	}
 					    	else{
-					    		categories.add(new Long(id));
+					    		categories.add(Long.valueOf(id));
 					    	}
 					    }
 					    
@@ -1336,8 +1338,8 @@ public String saveLocality()
 								for(int j=0;j<totalCategCount;j++){
 									category = new VoterHouseInfoVO();
 									String[] categVal = jSONObject.getString("categ"+j).split(",");
-									category.setUserCategoryValueId(new Long(categVal[0]));
-									category.setCategoryValuesId(new Long(categVal[1]));
+									category.setUserCategoryValueId(Long.valueOf(categVal[0]));
+									category.setCategoryValuesId(Long.valueOf(categVal[1]));
 									categoriesList.add(category);
 								}
 								
@@ -1435,8 +1437,8 @@ public String saveLocality()
 								for(int j=0;j<totalCategCount;j++){
 									category = new VoterHouseInfoVO();
 									String[] categVal = jSONObject.getString("categ"+j).split(",");
-									category.setUserCategoryValueId(new Long(categVal[0]));
-									category.setCategoryValuesId(new Long(categVal[1]));
+									category.setUserCategoryValueId(Long.valueOf(categVal[0]));
+									category.setCategoryValuesId(Long.valueOf(categVal[1]));
 									categoriesList.add(category);
 								}
 								
@@ -1493,7 +1495,7 @@ public String saveLocality()
 			try {
 				jObj = new JSONObject(param);
 				userAccessStates = votersAnalysisService.getAllElectionsInAConsti(2l,jObj.getLong("constituencyId"));
-				System.out.println(jObj);
+				LOG.info(jObj);
 			} catch (ParseException e) {
 				LOG.error("Exception Occured in getElectionsInAConsti() Method, Exception - ",e);
 				e.printStackTrace();
@@ -1516,7 +1518,7 @@ public String saveLocality()
 					
 				hamlets = regionServiceDataImp.getWardsInALocalElectionBodyByID(jObj.getLong("tehsilId"));
 				}
-				System.out.println(jObj);
+				LOG.info(jObj);
 			} catch (ParseException e) {
 				LOG.error("Exception Occured in getElectionsInAConsti() Method, Exception - ",e);
 				e.printStackTrace();
@@ -1566,7 +1568,7 @@ public String saveLocality()
 				    		voterDataVO.setCastePresent(true);
 				    	}
 				    	else{
-				    		categories.add(new Long(id));
+				    		categories.add(Long.valueOf(id));
 				    	}
 				    }
 				} 
@@ -1775,10 +1777,10 @@ public String saveLocality()
 				JSONArray arr1 = jObj.getJSONArray("uncheckedflags");
 				if(arr.length() > 0)
 					for(int i=0;i<arr.length();i++)
-						checkedflagIds.add(new Long(arr.get(i).toString()));
+						checkedflagIds.add(Long.valueOf(arr.get(i).toString()));
 				if(arr1.length() > 0)
 					for(int j=0;j<arr1.length();j++)
-						uncheckedflags.add(new Long(arr1.get(j).toString()));
+						uncheckedflags.add(Long.valueOf(arr1.get(j).toString()));
 				result = voterReportService.addFlagToVoter(jObj.getLong("voterId"),checkedflagIds,uncheckedflags,userId);
 				
 		   }
